# pricesniper

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: architecture.md
docs/adr/: 0001-pluggable-source-adapters.md  0002-first-source-feed-over-scrape.md  0003-sqlite-behind-a-store-interface.md  0004-discord-via-rest-not-a-gateway-bot.md  README.md  template.md
src/pricesniper/: __init__.py  __main__.py  alerting.py  matching.py  models.py  storage.py  valuation.py
src/pricesniper/sources/: base.py  demo.py  feed.py  sample_feed.xml  samples.py
tests/: test_alerting.py  test_feed.py  test_storage.py  test_valuation.py
