[project]
name = "pricesniper"
version = "0.3.0"
description = "A cross-platform tech-deal detector: finds price gaps and markdowns across retailers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",      # HTTP client for real adapters (like fetch/axios in JS)
    "selectolax>=0.3",  # fast HTML parser for real adapters (like Cheerio in JS)
    "python-dotenv>=1.0",  # loads secrets from a local .env file
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",        # linter + formatter in one (like ESLint + Prettier)
]

# Lets you run the app as `uv run pricesniper` once dependencies are synced.
[project.scripts]
pricesniper = "pricesniper.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pricesniper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# A sensible starter set: pycodestyle, pyflakes, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]
